Bug 753878 - Part 4: Structure for uploading changed meta/global.