@@ -24,6 +24,8 @@ import org.mozilla.gecko.sync.crypto.CryptoException;
 
 public class TestPersistedMetaGlobal {
   MockSharedPreferences prefs = null;
+  private final String TEST_META_URL = "metaURL";
+  private final String TEST_CREDENTIALS = "credentials";
 
   @Before
   public void setUp() {
@@ -52,22 +54,22 @@ public class TestPersistedMetaGlobal {
     PersistedMetaGlobal persisted = new PersistedMetaGlobal(prefs);
 
     // Test fresh start.
-    assertNull(persisted.metaGlobal());
+    assertNull(persisted.metaGlobal(TEST_META_URL, TEST_CREDENTIALS));
 
     // Test persisting.
     String body = "{\"id\":\"global\",\"payload\":\"{\\\"syncID\\\":\\\"zPSQTm7WBVWB\\\",\\\"storageVersion\\\":5,\\\"engines\\\":{\\\"clients\\\":{\\\"version\\\":1,\\\"syncID\\\":\\\"fDg0MS5bDtV7\\\"},\\\"bookmarks\\\":{\\\"version\\\":2,\\\"syncID\\\":\\\"NNaQr6_F-9dm\\\"},\\\"forms\\\":{\\\"version\\\":1,\\\"syncID\\\":\\\"GXF29AFprnvc\\\"},\\\"history\\\":{\\\"version\\\":1,\\\"syncID\\\":\\\"av75g4vm-_rp\\\"},\\\"passwords\\\":{\\\"version\\\":1,\\\"syncID\\\":\\\"LT_ACGpuKZ6a\\\"},\\\"prefs\\\":{\\\"version\\\":2,\\\"syncID\\\":\\\"-3nsksP9wSAs\\\"},\\\"tabs\\\":{\\\"version\\\":1,\\\"syncID\\\":\\\"W4H5lOMChkYA\\\"}}}\",\"username\":\"5817483\",\"modified\":1.32046073744E9}";
-    MetaGlobal mg = new MetaGlobal(null, null);
+    MetaGlobal mg = new MetaGlobal(TEST_META_URL, TEST_CREDENTIALS);
     mg.setFromRecord(CryptoRecord.fromJSONRecord(body));
     persisted.persistMetaGlobal(mg);
 
-    MetaGlobal persistedGlobal = persisted.metaGlobal();
+    MetaGlobal persistedGlobal = persisted.metaGlobal(TEST_META_URL, TEST_CREDENTIALS);
     assertNotNull(persistedGlobal);
     assertEquals("zPSQTm7WBVWB", persistedGlobal.getSyncID());
     assertTrue(persistedGlobal.getEngines() instanceof ExtendedJSONObject);
-    assertEquals(new Long(5), persistedGlobal.getStorageVersion());
+    assertEquals(Long.valueOf(5), persistedGlobal.getStorageVersion());
 
     // Test clearing.
     persisted.persistMetaGlobal(null);
-    assertNull(persisted.metaGlobal());
+    assertNull(persisted.metaGlobal(null, null));
   }
 }
